--- a/.github/workflows/fetch-episodes.yml
+++ b/.github/workflows/fetch-episodes.yml
@@ -12,33 +12,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: 📦 Installer Node.js
+      - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # Version recommandée
+          node-version: 18
 
-      - name: 📥 Installer les dépendances
-        run: npm ci  # Utilise npm ci pour éviter les conflits de dépendances
+      - name: Install dependencies
+        run: npm install
 
-      - name: 🔍 Vérification du payload
-  run: echo "Payload: $(echo '${{ toJson(github.event.client_payload) }}')"
+      - name: Run bot script
+        run: node javascript/bot.js "https://anime-sama.fr/catalogue/overlord/saison1/vf/episodes.js"
 
-      - name: 🔄 Exécuter le bot avec l'URL reçue
+      - name: 📤 Commit et push
         env:
-          EPISODE_URL: ${{ github.event.client_payload.url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if [[ -z "$EPISODE_URL" ]]; then
-            echo "Aucune URL fournie, annulation du script."
-            exit 1
-          fi
-          node javascript/bot.js "$EPISODE_URL"
-
-      - name: 📤 Commiter le fichier mis à jour
-        run: |
-          git config --global user.name "GitHub Actions Bot"
+          git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add episodes.json
-          git diff --cached --quiet || git commit -m "Mise à jour automatique de episodes.json"
-          git push
+          git commit -m "🔄 Mise à jour automatique de episodes.json" || echo "Aucune modification à commettre"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
