--- a/.github/workflows/fetch-episodes.yml
+++ b/.github/workflows/fetch-episodes.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run bot script
         run: node javascript/bot.js "https://anime-sama.fr/catalogue/overlord/saison1/vf/episodes.js"
 
-      - name: 📤 Commit et push
+      - name: Commit et push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
