--- a/.github/workflows/fetch-episodes.yml
+++ b/.github/workflows/fetch-episodes.yml
@@ -5,17 +5,17 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 */6 * * *'  # Exécuter toutes les 6 heures
+    - cron: "0 */6 * * *"  # Exécuter toutes les 6 heures
 
 jobs:
   update-episodes:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
@@ -31,6 +31,13 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          
+          # Vérifier si episodes.json a été modifié
+          if git diff --quiet episodes.json; then
+            echo "Aucune modification détectée, annulation du commit."
+            exit 0
+          fi
+
           git add episodes.json
-          git commit -m "🔄 Mise à jour automatique de episodes.json" || echo "Aucune modification à commettre"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
+          git commit -m "🔄 Mise à jour automatique de episodes.json"
+          git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git" HEAD:main
