--- a/.github/workflows/fetch-episodes.yml
+++ b/.github/workflows/fetch-episodes.yml
@@ -5,37 +5,42 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 */6 * * *"  # Exécuter toutes les 6 heures
+    - cron: "0 */6 * * *"  # Toutes les 6 heures
+  repository_dispatch:
+    types: [fetch-season]  # Reçoit l'event depuis Postman
 
 jobs:
-  update_episodes:  # ⚠️ Remplacé le "-" par "_" pour éviter une éventuelle erreur
+  update_episodes:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 📥 Cloner le dépôt
         uses: actions/checkout@v4
 
-      - name: Install Node.js
+      - name: 🔧 Installer Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: 📦 Installer les dépendances
+        run: npm install node-fetch@2
 
-      - name: Run bot script
-        run: node javascript/bot.js "https://anime-sama.fr/catalogue/overlord/saison1/vf/"
+      - name: 🔄 Exécuter le bot avec l'URL reçue
+        env:
+          URL_FROM_POSTMAN: ${{ github.event.client_payload.url }}
+        run: |
+          echo "🔗 URL reçue de Postman : $URL_FROM_POSTMAN"
+          node javascript/bot.js "$URL_FROM_POSTMAN"
 
-      - name: Commit et push changes
+      - name: 📤 Commit & Push si changements
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-          # Vérifier si episodes.json a changé
           if git diff --quiet HEAD -- episodes.json; then
-            echo "Aucune modification détectée, fin du script."
+            echo "✅ Aucun changement détecté, fin du script."
             exit 0
           fi
 
